# Open-Assistant

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  404.html  CODEOWNERS  CONTRIBUTING.md  LICENSE  Prompting_Guide.md  README.md  README_CN.md  Super Ai Assistant  api.html  asset-manifest.json  backup_settings.json.crypt14  blog.html  contributors.js  docker-compose.inference.yaml  docker-compose.yaml  index.html  inlang.config.js  package-lock.json  package.json  project.inlang.json  pyproject.toml  redis.conf  setup.cfg  sitemap.xml  slurm.sh  stickers.db.crypt14  train.sh  update
.devcontainer/: README.md  (+2 more)
discord-bot/: .env.example  .gitignore  CONTRIBUTING.md  EXAMPLES.md  README.md  __main__.py  api_client.py  bot.py  bot_base.py  bot_settings.py  channel_handlers.py  dev-requirements.txt  flake8-requirements.txt  message_templates.py  noxfile.py  pyproject.toml  requirements.dev.txt  requirements.txt  task_handlers.py
discord-bot/bot/: __init__.py  __main__.py  api_client.py  bot.py  config.py  messages.py  messages_BACKUP_13621.py  messages_LOCAL_13621.py  settings.py  utils.py
discord-bot/bot/db/: schema.sql  schemas.py
discord-bot/bot/extensions/: EXAMPLES.md  __init__.py  _example.py  guild_settings.py  help.py  hot_reload.py  tasks.py  text_labels.py  user_input_test.py  work.py  work.py.orig
discord-bot/events/: __init__.py  on_message.py  on_ready.py
discord-bot/templates/: help.msg  task_assistant_reply.msg  task_initial_prompt.msg  task_rank_initial_prompts.msg  task_user_reply.msg  teaser_assistant_reply.msg  teaser_initial_prompt.msg  teaser_rank_conversation_replies.msg  teaser_rank_initial_prompts.msg  teaser_rate_summary.msg  teaser_summarize_story.msg  teaser_user_reply.msg
discord-bot/tests/: test_api_contract.py  test_oasst_api_client.py
model/: .gitignore  MESSAGE_AND_TOKEN_FORMAT.md  README.md  pyproject.toml  utils.py
model/model_eval/: README.md  eval_datasets.py  eval_rm.py  perplexity.py  rejection_sampling.py  sampling_score.py  utils.py
model/model_eval/manual/: create_synth_import.py  generate.py  requirements.txt  sampling_report.py  sampling_report_ds.py  subsample_dataset.py
model/model_eval/sample_results/: comparison.json  rejected_samples.json  selected_samples.json  theblackcat102-pythia-12b-deduped-sft.json
model/model_training/: .gitignore  README.md  check_dataset_appearances.py  check_dataset_counts.py  efficiency_utils.py  losses.py  metrics.py  pyproject.toml  requirements.txt  test.py  to_triton.py  to_triton_rm.py  to_triton_sft.py  trainer_rl.py  trainer_rm.py  trainer_rm_label.py  trainer_sft.py  trainer_t_few.py  upload_rm.py  utils.py
model/model_training/configs/: accelerate_config.yaml  config.yaml  config_rl.yaml  config_rm.yaml  deepspeed_rl.json  deepspeed_rl_zero3.json  ppo_config.yaml  triton_config.pbtxt  triton_config_rm.pbtxt  triton_config_sft.pbtxt  zero3_config.json  zero3_config_falcon.json  zero3_config_pretrain.json  zero3_config_sft.json  zero_config.json  zero_config_falcon.json  zero_config_pretrain.json  zero_config_sft_65b.json
model/model_training/custom_datasets/: README.md  __init__.py  dialogue_collator.py  entities.py  extra_rm_datasets.py  formatting.py  instruction.py  oasst_dataset.py  overfit.json  pretrain_datasets.py  prompt_dialogue.py  qa_datasets.py  rank_datasets.py  ranking_collator.py  summarization.py  toxic_conversation.py  translation.py  utils.py
model/model_training/dataset_eval/: Makefile  README.md  app.py  check_if_dataset_is_local.py  iterate_over_datasets.py  requirements.txt
model/model_training/models/: RWNTKScaledRope.py  __init__.py  configuration_llama.py  gptj.py  ia3_pathing.py  modeling_llama.py  patch_resid_dropout.py  patching.py  patching_falcon.py  patching_llama.py  patching_neox.py  patching_utils.py  peft_modeling.py  prefix_llama.py  reward_model.py  rope.py  test_patched_gpt_neox.py  tokenization_llama.py  tokenization_llama_fast.py
model/model_training/tests/: test_data_collator.py  test_datasets.py  test_dialogue_data_collator.py  test_formatting.py  test_oasst_dataset.py  test_patched_falcon.py  test_patched_gpt_neox.py  test_patched_llama.py  test_ranking_collator.py  test_rm_loading.py  test_tokenizer.py  test_utils.py
model/model_training/tools/: augment_oasst.py  check_oasst_export.py  convert_llama_weights_to_hf.py  export_model.py  model_chat.py  model_cli.py  model_enc.py  sample_rm_aspect.py  sample_rm_data.py
model/model_training/utils/: losses.py  ppo_trainer.py  ppo_utils.py  utils.py  utils_rl.py
model/pretokenizer/: README.md  __main__.py  create_hf_tokenizer_config.py  indexed_dataset.py  pretokenize.py  requirements.txt  tokenizer.py
model/pretokenizer/configs/: pretokenize.yaml
model/reward/instructor/: README.md  TODO.md  cls_dataset.py  experimental_dataset.py  models.py  pyproject.toml  rank_datasets.py  requirements.txt  summary_quality_trainer.py  trainer.py  utils.py
model/reward/rankgen/: README.md  proto.ipynb  pyproject.toml  rankgen.py
model/supervised_finetuning/: README.md  efficiency_utils.py  losses.py  requirements.txt  trainer.py  trainer_rlhf.py  training a transformer-based model  utils.py
model/supervised_finetuning/configs/: config.yaml  ilql_config.yml  ppo_config.yml  rlhf.yaml
model/supervised_finetuning/custom_datasets/: README.md  __init__.py  dialogue_collator.py  formatting.py  prompt_dialogue.py  qa_datasets.py  summarization.py  toxic_conversation.py  translation.py
oasst-data/: README.md  generate_oasst2.ipynb  pyproject.toml
oasst-data/examples/: clean_dataset.py  filter_dataset.py  filter_messages.py  filter_trees.py  make_split.py  split_dataset.py  tree_to_messages.py
oasst-data/oasst2/: generate_oasst2.ipynb  keyword_flagging.py
oasst-data/oasst_data/: __init__.py  loader.py  reader.py  schemas.py  traversal.py  writer.py
oasst-shared/: README.md  pyproject.toml  setup.py
oasst-shared/oasst_shared/: api_client.py  model_configs.py  shared_settings.py  utils.py
oasst-shared/tests/: test_oasst_api_client.py
(+3141 files in other folders)
