[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "model_training"
description = "Open Assistant Model Training Module"
version = "1.0.0"
authors = [
    { name = "LAION-AI", email = "contact@laion.ai" }
]
dependencies = [
    "accelerate>=0.15.0",
    "bitsandbytes>=0.36.0.post2",
    "datasets>=2.8.0",
    "deepspeed>=0.8.3",
    "evaluate>=0.4.0",
    "fastlangid>=1.0.11",
    "flash_attn>=0.2.8",
    "gdown",
    "trlx @ git+https://github.com/CarperAI/trlx.git",
    "ninja>=1.11.1",
    "nltk>=3.8.1",
    "numpy>=1.22.4",
    "py7zr",
    "PyYAML>=6.0",
    "sentencepiece>=0.1.97",
    "scikit-learn>=1.2.0",
    "tokenizers>=0.13.3",
    "torch>=2.0.0",
    "langcodes==3.3.0",
    "tqdm>=4.65.0",
    "pydantic==1.10.7",
    "transformers @ git+https://github.com/huggingface/transformers.git@6fc44656b43f1de939a1e62dd59c45d1fec9f1aa",
    "wandb>=0.14.0",
]

[project.optional-dependencies]
tests = [
  'pytest',
]

[tool.setuptools]
py-modules = ["model_training"]

[tool.black]
line-length = 120
target-version = ['py310']
