[project]
name = "oasst_shared"
description = "Open Assistant Shared Module"
version = "1.0.0"
authors = [
    { name = "LAION-AI", email = "contact@laion.ai" }
]
dependencies = [
    "pydantic==1.10.4",
    "aiohttp==3.8.3",
    "aiohttp[speedups]",
    "loguru==0.6.0",
    "psutil==5.9.4",
    "pynvml==11.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
