[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "reward_instructor"
description = "Open Assistant Reward Instructor Module"
version = "1.0.0"
authors = [
    { name = "LAION-AI", email = "contact@laion.ai" }
]

dependencies = [
    "datasets==2.8.0",
    "evaluate==0.4.0",
    "scikit-learn==1.2.0",
    "sentencepiece==0.1.97",
    "torch>=1.12.1",
    "transformers==4.25.1",
    "wandb==0.13.7",
    "pandas==1.3", # downgrade to prevent errors with version `GLIBCXX_3.4.29' not found
]

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 120
target-version = ['py310']